--- a/index.html
+++ b/index.html
@@ -1,25 +1,36 @@
 <!DOCTYPE html>
-<html lang="nl">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ice Cream 3D</title>
+  <title>IceCream 3D Test</title>
   <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      width: 100%;
-      height: 100%;
-      overflow: hidden;
-      background-color: #202020;
+    body { margin: 0; overflow: hidden; }
+    #ui {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      display: flex;
+      gap: 10px;
     }
-
-    canvas {
-      display: block;
+    button {
+      padding: 8px 12px;
+      font-size: 14px;
+      cursor: pointer;
     }
   </style>
 </head>
 <body>
-  <script type="module" src="./main.js"></script>
+  <div id="ui">
+    <button id="chocolate-btn">Chocolade</button>
+    <button id="strawberry-btn">Aardbei</button>
+    <button id="vanilla-btn">Vanille</button>
+
+    <button id="no-toppings-btn">Geen toppings</button>
+    <button id="speculoos-btn">Speculoos</button>
+    <button id="chocolade-btn">Chocolade</button>
+    <button id="discodip-btn">Discodip</button>
+
+  </div>
+  <script type="module" src="main.js"></script>
 </body>
 </html>
