--- a/index.html
+++ b/index.html
@@ -4,33 +4,159 @@
   <meta charset="UTF-8">
   <title>IceCream 3D Test</title>
   <style>
-    body { margin: 0; overflow: hidden; }
+    body { 
+      margin: 0; 
+      overflow: hidden; 
+      font-family: Arial, sans-serif; 
+    }
+
     #ui {
       position: absolute;
-      top: 10px;
-      left: 10px;
+      top: 50%;  
+      left: 15%;        
+      transform: translate(-50%, -50%);
+      background-color: white;
+      padding: 30px;
       display: flex;
-      gap: 10px;
+      flex-direction: column;
+      gap: 24px;
+      border-radius: 24px;
+      border: 4px solid #e68798;
+      width: 400px;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.2);
     }
-    button {
-      padding: 8px 12px;
+
+    h1 { margin: 0 0 10px 0; color: #e68798; text-align: center; }
+    h2 { margin: 10px 0 5px 0; color: #c04850; }
+
+    .gegevens input {
+      width: 100%;
+      padding: 6px 10px;
+      border: 1px solid #e68798;
+      border-radius: 12px;
+      box-sizing: border-box;
+      margin-bottom: 12px; /* meer verticale ruimte tussen inputs */
+    }
+
+    .input-row {
+      display: flex;
+      gap: 8px;
+    }
+
+    .input-row input {
+      flex: 1;
+    }
+
+    .naam-input {
+      display: flex;
+      gap: 8px;
+    }
+
+    .naam-input input {
+      flex: 1;
+      margin-bottom: 12px; /* ruimte onder naam */
+    }
+
+    select {
+      padding: 8px 10px;
+      border-radius: 12px;
+      border: 1px solid #e68798;
+      background-color: #fff0f3;
+      cursor: pointer;
+      font-size: 14px;
+      width: 100%;
+      box-sizing: border-box;
+      margin-bottom: 12px; /* consistente ruimte */
+    }
+
+    select:hover {
+      background-color: #e68798;
+      color: white;
+    }
+
+    .prijs {
+      display: flex;
+      flex-direction: column;
+      gap: 12px; /* ruimte boven en onder bedrag gelijk aan knop */
+      align-items: center;
+    }
+
+    .prijs p {
+      font-weight: bold;
+      font-size: 18px;
+      margin: 0;
+      text-align: center;
+    }
+
+    .plaats-bestelling button {
+      padding: 10px 15px;
       font-size: 14px;
       cursor: pointer;
+      border-radius: 24px;
+      border: 1px solid #e68798;
+      background-color: #fff0f3;
+      transition: all 0.2s;
+      width: 100%;
+      box-sizing: border-box;
+    }
+
+    .plaats-bestelling button:hover {
+      background-color: #e68798;
+      color: white;
     }
   </style>
 </head>
 <body>
   <div id="ui">
-    <button id="chocolate-btn">Chocolade</button>
-    <button id="strawberry-btn">Aardbei</button>
-    <button id="vanilla-btn">Vanille</button>
+    <h1>Jelle's IceCream</h1>
 
-    <button id="no-toppings-btn">Geen toppings</button>
-    <button id="speculoos-btn">Speculoos</button>
-    <button id="chocolade-btn">Chocolade</button>
-    <button id="discodip-btn">Discodip</button>
+    <div class="gegevens">
+      <h2>Klantengegevens</h2>
 
+      <div class="naam-input">
+        <input type="text" id="naam" placeholder="Naam">
+      </div>
+
+      <div class="input-row">
+        <input type="text" id="straat" placeholder="Straat">
+        <input type="text" id="huisnummer" placeholder="Nr">
+      </div>
+
+      <div class="input-row">
+        <input type="text" id="gemeente" placeholder="Gemeente">
+        <input type="text" id="postcode" placeholder="Postcode">
+      </div>
+    </div>
+
+    <div class="smaak">
+      <h2>Kies een smaak:</h2>
+      <select id="smaak-select">
+        <option value="chocolate">Chocolade</option>
+        <option value="strawberry">Aardbei</option>
+        <option value="vanilla">Vanille</option>
+      </select>
+    </div>
+
+    <div class="topping">
+      <h2>Kies een topping:</h2>
+      <select id="topping-select">
+        <option value="none">Geen topping</option>
+        <option value="speculoos">Speculoos</option>
+        <option value="chocolade">Chocolade</option>
+        <option value="discodip">Discodip</option>
+      </select>
+    </div>
+
+    <div class="prijs">
+      <h2>Totaal bedrag:</h2>
+      <p id="prijs-waarde">€0,00</p>
+    </div>
+
+    <div class="plaats-bestelling">
+      <button id="bestel-btn">Plaats bestelling</button>
+    </div>
   </div>
+
   <script type="module" src="main.js"></script>
 </body>
 </html>
