feat: render deploy

--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
 
     <div class="smaak">
       <h2>Kies een smaak:</h2>
+      <p>Selecteer een bol en maak je keuze.</p>
       <select id="smaak-select">
         <option value="chocolate">Chocolade</option>
         <option value="strawberry">Aardbei</option>
